# oscal-generator-mcp

./: .gitignore  README.md  SECURITY.md  gen_layer0_package.py  layer0_protocol.oscal.json  layer0_protocol.oscal.sig.json  llms.txt  pyproject.toml  server.json  server.py  sigstore_bridge.py  verify.html
.github/workflows/: ci.yml
oscal_generator_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ssp/: acord.ssp.oscal.json  acord.ssp.sig.json  as400.ssp.oscal.json  as400.ssp.sig.json  cics.ssp.oscal.json  cics.ssp.sig.json  cobol.ssp.oscal.json  cobol.ssp.sig.json  dlms.ssp.oscal.json  dlms.ssp.sig.json  edi.ssp.oscal.json  edi.ssp.sig.json  fix.ssp.oscal.json  fix.ssp.sig.json  gs1.ssp.oscal.json  gs1.ssp.sig.json  hl7-fhir.ssp.oscal.json  hl7-fhir.ssp.sig.json  iso20022.ssp.oscal.json  iso20022.ssp.sig.json  iso8583.ssp.oscal.json  iso8583.ssp.sig.json  mismo.ssp.oscal.json  mismo.ssp.sig.json  mqtt.ssp.oscal.json  mqtt.ssp.sig.json  nacha.ssp.oscal.json  nacha.ssp.sig.json  oracle.ssp.oscal.json  oracle.ssp.sig.json  sap.ssp.oscal.json  sap.ssp.sig.json  scada.ssp.oscal.json  scada.ssp.sig.json  sip.ssp.oscal.json  sip.ssp.sig.json  tax.ssp.oscal.json  tax.ssp.sig.json
tests/: test_oscal.py  test_sigstore_bridge.py
