[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oscal-generator-mcp"
version = "0.1.1"
description = "Generate machine-readable NIST OSCAL (SSP / component-definition) + FedRAMP RFC-0024 readiness — governed + signed. CSOAI Layer-0."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = ["mcp>=1.28.0", "pydantic>=2.0", "cryptography>=41.0", "sigstore>=4.0.0"]

[project.optional-dependencies]
# NIST-grade strict validation via the standard community OSCAL toolchain.
validate = ["compliance-trestle>=4.0.0"]

[project.scripts]
oscal-generator-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
